# naga-include-poc

./: Cargo.toml  README.md  example-types.glsl  example-types.wgsl  example-util.glsl  example-util.wgsl  example-widget.glsl  example.wgsl  in.glsl  in.wgsl
src/: main.rs
