[package]
name = "naga-include-poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#naga = { version = "0.7.1", features = ["wgsl-in", "glsl-in", "wgsl-out"] }
naga = { git = "https://github.com/scoopr/naga/", branch = "lib-hack", features = [
    "wgsl-in",
    "glsl-in",
    "wgsl-out"
] }
anyhow = "*"
